Fixed contact info input textarea overflow problems on thin viewports

--- a/src/MainApp.css
+++ b/src/MainApp.css
@@ -297,5 +297,22 @@ a:hover {
     margin-top: -5px;
     max-height: 1.2em;
     font-size: 18px;
+    max-width: 100%; 
+    height: auto;
+}
 
+.contact a {
+    font-weight: bold;
+}
+
+
+@media (max-width:800px) {
+    .contact ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-textarea {
+        margin-top: 0;
+    }
 }
